example/secondfile/objects/DHStatus_Other_Providers__c.object
<CustomObject>
    <description>RDS Deal Hash-Update Deal Hash Details-ASR Details-Access Test Status Details-Message Details-Completion Details-Demarc Details- Other Providers</description>
    <fields>
        <fullName>ATT_Demarc_Label__c</fullName>
        <description>RDS Deal Hash-Update Deal Hash Details-ASR Details-Access Test Status Details-Message Details-Completion Details-Demarc Details-Other Providers-ATT Demarc Label</description>
        <label>ATT Demarc Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_Details__c</fullName>
        <description>RDS Deal Hash-Update Deal Hash Details-ASR Details-Access Test Status Details-Message Details-Completion Details-Demarc Details-Other Providers-Customer Contact Details</description>
        <label>Customer Contact Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatusUpdateIDHID__c</fullName>
        <formula>DHStatus_Demarc_Details__r.DHStatus_Completion_Details__r.DHStatus_Message_Details__r.DHStatus_Access_Test_Status_Details__r.DHStatus_ASR_Details__r.DHStatus_Update_IDH__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DHStatusUpdateIDHID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatus_Demarc_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RDS Deal Hash-Update Deal Hash Details-ASR Details-Access Test Status Details-Message Details-Completion Details-Demarc Details- Other Providers-DHStatus-Other Providers</description>
        <label>DHStatus-Demarc Details</label>
        <referenceTo>DHStatus_Demarc_Details__c</referenceTo>
        <relationshipLabel>DHStatus-Other Providers</relationshipLabel>
        <relationshipName>DHStatus_Other_Providers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Demarc_Location2__c</fullName>
        <label>Demarc Location2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demarc_Location__c</fullName>
        <label>Demarc Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extended_Wire_Indicator__c</fullName>
        <description>RDS Deal Hash-Update Deal Hash Details-ASR Details-Access Test Status Details-Message Details-Completion Details-Demarc Details-Other Providers-Extended Wire Indicator</description>
        <label>Extended Wire Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jack_Type__c</fullName>
        <description>RDS Deal Hash-Update Deal Hash Details-ASR Details-Access Test Status Details-Message Details-Completion Details-Demarc Details-Other Providers-Jack Type</description>
        <label>Jack Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Demarc_Label__c</fullName>
        <description>RDS Deal Hash-Update Deal Hash Details-ASR Details-Access Test Status Details-Message Details-Completion Details-Demarc Details-Other Providers-Provider Demarc Label</description>
        <label>Provider Demarc Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <formula>DHStatus_Demarc_Details__r.DHStatus_Completion_Details__r.DHStatus_Message_Details__r.DHStatus_Access_Test_Status_Details__r.Record_Type__c</formula>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <label>DHStatus-Other Providers</label>
    <nameField>
        <displayFormat>OP-{00000}</displayFormat>
        <label>DHStatus-Other Providers Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus-Other Providers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>